--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Libraries"
+    "import scipy.stats\n",
+    "import numpy as np"
    ]
   },
   {
@@ -32,11 +33,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(172.14308590115726, 174.79024743217607)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "heights = [167, 167, 168, 168, 168, 169, 171, 172, 173, 175, 175, 175, 177, 182, 195]\n",
+    "mean = sum(heights)/len(heights)\n",
+    "sample = len(heights) \n",
+    "std = 4\n",
+    "s_std = std/np.sqrt(sample)\n",
+    "scipy.stats.norm.interval(0.8, mean, s_std)"
    ]
   },
   {
@@ -51,11 +68,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.3877107698086157, 1.9019964840943293)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "sample = 105 \n",
+    "proportion = 27/sample\n",
+    "scipy.stats.norm.interval(0.8, proportion)\n",
+    "scipy.stats.norm.interval(0.9, proportion)"
    ]
   },
   {
@@ -70,11 +101,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(14.598428331086021, 37.63154004707701)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "var = std**4\n",
+    "#df = 15\n",
+    "s_v = var/np.sqrt(sample)\n",
+    "scipy.stats.chi2.interval(0.9, s_v)"
    ]
   },
   {
@@ -93,11 +138,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "from scipy.stats import sem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-2.2281388519649385, 2.2281388519649385)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acid = [9.8, 10.2, 10.4, 9.8, 10.0, 10.2, 9.6]\n",
+    "sample = len(acid)\n",
+    "mean = sum(acid)/sample\n",
+    "mean\n",
+    "scipy.stats.sem(acid)\n",
+    "scipy.stats.t.interval(0.95, mean)"
    ]
   },
   {
@@ -187,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
